tests/typechecker/should_pass/replicated_seq_comp.csp
channel c : {0,1}

P = ; x : <0,1> @ c.x -> SKIP
