tests/typechecker/should_fail/enumerations_2.csp
datatype A = B.Bool.{0..1}
channel c : A

f(x) = {| x |}

Q = [] x : f(0) @ x -> P

